<resources>
    <string name="app_name">Journal Boss</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_authentication">Log In</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="log_out">Sign Out</string>
    <string name="my_entries">My Entries</string>
    <string name="entered_on">Entered on</string>
    <string name="at">at</string>
    <string name="entry_detail">Entry Detail</string>
    <string name="entry_heading">Entry Heading</string>
    <string name="entry_description">Entry Description</string>
    <string name="update_entry">Update Entry</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="save_entry">Save Entry</string>
</resources>
