<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AddEntryActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="5dp"
        android:layout_margin="@dimen/padding_8dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/padding_16"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextEntryHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/entry_heading"
                android:inputType="textAutoComplete|textPersonName"
                android:paddingBottom="@dimen/large_container_padding" />

            <EditText
                android:id="@+id/editTextEntryDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/entry_description"
                android:inputType="textAutoComplete|textPersonName"
                android:paddingBottom="@dimen/activity_horizontal_margin" />

            <Button
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/padding_16"
                android:layout_marginStart="@dimen/padding_8dp"
                android:layout_marginEnd="@dimen/padding_8dp"
                android:layout_marginTop="@dimen/padding_16"
                android:background="@drawable/transparent_button_background"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:elevation="10dp"
                android:padding="@dimen/content_padding"
                android:text="@string/set_date"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/half_black"
                android:textSize="@dimen/text_view_regular_size"
                tools:targetApi="lollipop"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/padding_16"
                android:layout_marginStart="@dimen/padding_8dp"
                android:layout_marginEnd="@dimen/padding_8dp"
                android:background="@drawable/transparent_button_background"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/ic_access_time_black_24dp"
                android:elevation="10dp"
                android:padding="@dimen/content_padding"
                android:text="@string/set_time"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/half_black"
                android:textSize="@dimen/text_view_regular_size"
                tools:targetApi="lollipop"
                tools:ignore="RtlCompat" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_update_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/padding_16"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginEnd="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_16"
        android:background="@drawable/transparent_update_button_background"
        android:elevation="10dp"
        android:padding="@dimen/content_padding"
        android:text="@string/save_entry"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_view_regular_size"
        tools:targetApi="lollipop"
        tools:ignore="RtlCompat" />


</LinearLayout>